syntax = "proto3";

option csharp_namespace = "Cp.ContactService.Protos";

package contact;

service ContactService {
  rpc Get(ContactId) returns(ContactModel);
  rpc GetAll(Empty) returns(ListOfContact);
  rpc Post(ContactModel) returns(ContactModel);
  rpc Put(ContactModel) returns(ContactModel);
  rpc Delete(ContactId) returns(Response);
}

message Empty {}

message ContactId {
    int64 UUID = 1;
}

message ContactModel {
    int64 UUID = 1;
    string Ad = 2;
    string Soyad = 3;
    string Firma = 4;
}

message ListOfContact {
    repeated ContactModel Contacts = 1;
}

message Response {
    int32 Code = 1;
    string Message = 2;
}
